--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
       "express-validator": "^7.0.1",
       "firebase-admin": "^11.11.0",
       "helmet": "^7.0.0",
+      "jsonwebtoken": "^9.0.2",
       "morgan": "^1.10.0"
     },
     "devDependencies": {
